@@ -12,15 +12,15 @@ module Qwik
  [:html,
   [:head,
    [:link,
-    {:rel=>"stylesheet",
-     :href=>".theme/css/base.css",
-     :type=>"text/css",
-     :media=>"screen,tv"}],
+    {:type=>"text/css",
+     :media=>"screen,tv",
+     :rel=>"stylesheet",
+     :href=>".theme/css/base.css"}],
    [:link,
-    {:rel=>"stylesheet",
-     :href=>".theme/qwikplain/qwikplain.css",
-     :type=>"text/css",
-     :media=>"screen,tv"}]],
+    {:type=>"text/css",
+     :media=>"screen,tv",
+     :rel=>"stylesheet",
+     :href=>".theme/qwikplain/qwikplain.css"}]],
   [:body,
    {:onload=>"qwik_onload();"},
    [:div,
@@ -31,8 +31,10 @@ module Qwik
     [:"!--", "main"],
     [:div,
      {:class=>"footer"},
-     "powered by ",
-     [:a, {:href=>"http://qwik.jp/"}, "qwikWeb"]],
+     [:span,
+      {:title=>"__qwik_page_generate_time__"},
+      "powered by ",
+      [:a, {:href=>"http://qwik.jp/"}, "qwikWeb"]]],
     [:"!--", "footer"]],
    [:"!--", "container"]]]]
 
