@@ -13,6 +13,12 @@
 
 	* lib/qwik/act-site.rb: New file.
 
+	* lib/qwik/act-site.rb: Show site status.
+	* lib/qwik/site-config.rb: New method blessed.
+	* lib/qwik/site-group.rb: New two methods.
+	* lib/qwik/site-config.rb: Delete old SiteConfig spec.
+	* lib/qwik/site-config.rb: Do not cache siteconfig.
+
 2009-09-08  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-pagelist.rb: Fix bug.
